syntax = "proto3";

package test;

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
    bytes binary = 4;
    int64 longId = 5;
    float floatVal = 6;
    double doubleVal = 7;
    repeated string names = 8;
    repeated int32 ids = 9;
}
